[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm>=6.2",
    "pip>=21.2",
]

[project]
name = "mockfactory"
authors = [{name = "cosmodesi"}]
description = "pmesh-based package to produce Gaussian mocks for validation of clustering pipelines"
version = "1.0.0"
dependencies = ["numpy", "scipy", "mpi4py", "pmesh @ git+https://github.com/MP-Gadget/pmesh", "mpytools @ git+https://github.com/adematti/mpytools"]
readme = "README.md"
requires-python = ">=3.10"
urls = {Repository = "http://github.com/cosmodesi/mockfactory"}
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools]
packages = ["mockfactory"]

[tool.setuptools.package-data]
mockfactory = ["mockfactory/desi/*.ecsv"]
